# snackbot

./: README.md
fixings/: README.md  hyperpixel_lcd_window.scad  hyperpixel_mount.scad  hyperpixel_retaining_tabs.scad  i2c_lcd_frame.scad  i2c_lcd_window.scad
matrix-keyboard/: README.md
matrix-keyboard/fw/: Cargo.toml
matrix-keyboard/fw/src/: main.rs
matrix-keyboard/keyboard-icd/: Cargo.toml
matrix-keyboard/keyboard-icd/src/: lib.rs
matrix-keyboard/pcb/: MembraneKeyboard.kicad_pcb  MembraneKeyboard.kicad_prl  MembraneKeyboard.kicad_pro  MembraneKeyboard.kicad_sch  fp-info-cache
vmc-host/: Cargo.toml
vmc-host/src/: lcd_driver.rs  main.rs  postcard_shim.rs  rpc_shim.rs  stock_info.rs  vmc_driver.rs
vmc-host/src/confirm_item_box/: imp.rs  mod.rs
vmc-host/src/make_another_selection_box/: imp.rs  mod.rs
vmc-host/src/make_payment_box/: imp.rs  mod.rs
vmc-host/src/make_selection_box/: imp.rs  mod.rs
vmc-host/src/vend_failed_box/: imp.rs  mod.rs
vmc-host/src/vend_in_progress_box/: imp.rs  mod.rs
vmc-host/src/vend_ok_box/: imp.rs  mod.rs
vmc/fw/: Cargo.toml
vmc/fw/.cargo/: config.toml
vmc/fw/src/: cashless_device.rs  chiller_driver.rs  coin_acceptor.rs  main.rs  mdb_driver.rs  motor_driver.rs  usb_device_handler.rs  vmc.rs  watchdog.rs
vmc/pcb/: LevelShifters.kicad_sch  mdb_interface.kicad_sch  pcb-job.gbrjob  pcb.kicad_pcb  pcb.kicad_pro  pcb.kicad_sch  power.kicad_sch  untitled.kicad_sch
vmc/test-client/: Cargo.toml
vmc/test-client/src/: client.rs  lib.rs
vmc/vmc-icd/: Cargo.toml
vmc/vmc-icd/src/: cashless_device.rs  chiller.rs  coin_acceptor.rs  coinacceptor.rs  dispenser.rs  lib.rs
