[package]
edition = "2021"
name = "matrix-keyboard"
version = "0.1.0"
license = "GPL-3.0-or-later"
authors = [ "David Pye <davidmpye@gmail.com>" ]

[dependencies]

defmt = "0.3"
defmt-rtt = "0.4"
fixed = "1.23.1"
fixed-macro = "1.2"

#cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
cortex-m = { version = "0.7.6", features = ["inline-asm"] }
cortex-m-rt = "0.7.0"
critical-section = "1.1"
panic-probe = { version = "0.3", features = ["print-defmt"] }

rand_core = "0.6.4"

embedded-hal-1 = { package = "embedded-hal", version = "1.0" }
embedded-hal-async = "1.0"
embedded-hal-bus = { version = "0.1", features = ["async"] }
embedded-io-async = { version = "0.6.1", features = ["defmt-03"] }
embedded-storage = { version = "0.3" }

static_cell = "2.1"
portable-atomic = { version = "1.5", features = ["critical-section"] }
log = "0.4"

rand = { version = "0.8.5", default-features = false }
lcd-lcm1602-i2c = "0.3.0"
embassy-embedded-hal = "0.2.0"
embassy-sync = "0.6.1"
embassy-time = "0.3.2"
embassy-executor = "0.6.3"
embassy-futures = "0.1.1"
embassy-rp = "0.2.0"
embassy-usb = "0.3.0"
embassy-usb-logger = "0.2.0"

[profile.release]
debug = 2
lto = true
opt-level = 'z'

[profile.dev]
debug = 2
lto = true
opt-level = "z"
