[package]
edition = "2021"
name = "snackbot-vmc"
version = "0.1.0"
license = "MIT OR Apache-2.0"

[dependencies]
defmt = "0.3"
defmt-rtt = "0.4"
fixed = "1.23.1"
fixed-macro = "1.2"

#cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
cortex-m = { version = "0.7.6", features = ["inline-asm"] }
cortex-m-rt = "0.7.0"
critical-section = "1.1"
panic-probe = { version = "0.3", features = ["print-defmt"] }
byte-slice-cast = { version = "1.2.0", default-features = false }
rand_core = "0.6.4"

embedded-hal-1 = { package = "embedded-hal", version = "1.0" }
embedded-hal-async = "1.0"
embedded-hal-bus = { version = "0.1", features = ["async"] }
embedded-io-async = { version = "0.6.1", features = ["defmt-03"] }
embedded-storage = { version = "0.3" }

static_cell = "2.1"
portable-atomic = { version = "1.5", features = ["critical-section"] }
log = "0.4"
pio-proc = "0.2"
pio = "0.2.1"
rand = { version = "0.8.5", default-features = false }
embedded-sdmmc = "0.7.0"
postcard-schema = "0.2.0"
vmc-icd = { version = "0.1.0", path = "../vmc-icd" }
pio-9bit-uart-async = { git = "https://github.com/davidmpye/pio-9bit-uart-async", version = "0.1.0" }
embassy-rp = { version = "0.3.0", features = ["defmt", "time-driver", "critical-section-impl"] }
embassy-time = "0.4.0"
embassy-sync = "0.6.2"
embassy-executor = { version = "0.7.0", features = ["arch-cortex-m", "defmt", "executor-interrupt", "executor-thread"] }
embassy-usb = "0.4.0"
postcard = "1.1.1"
postcard-rpc = { version = "0.11.5", features = ["embassy-usb-0_4-server"] }


[profile.release]
debug = 2
lto = true
opt-level = 'z'

[profile.dev]
debug = 2
lto = true
opt-level = "z"

